--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "twitch-wheel-streak",
-  "version": "1.0.0",
+  "version": "1.2.5",
   "scripts": {
     "start": "npx node-repl ./index.js",
     "dev": "node-repl ./index.js"
   },
   "dependencies": {
+    "sound-play": "^1.1.0",
     "twitch-js": "2.0.0-beta.33"
   },
   "engines": {
